Fix whitespace mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -15,9 +15,10 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 $link: $kaldi-red
-
-
 $family-primary: $family-monts
+
+html, body
+  overflow-x: hidden;
 
 .navbar .navbar-menu
   box-shadow:none !important
